change java version, add check file